put cache on some requests

--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,18 @@ MAIL_CLIENT_SECRET=
 MAIL_REFRESH_TOKEN=
 SENDER_EMAIL_ADDRESS=
 
-USER_POSTGRES=
-PASSWORD_POSTGRES=
-DB_NAME_POSTGRES=
+CLIENT_EMAIL_GOOGLE_SHEETS=
+PRIVATE_KEY_GOOGLE_SHEETS=
+
+DATABASE_DRIVER=
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_NAME=
+
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
 
 DATABASE_URL="${DATABASE_DRIVER}://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public"
