--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,3 +11,19 @@ services:
       POSTGRES_USER: ${DATABASE_USER}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_DB: ${DATABASE_NAME}
+  redis:
+    image: bitnami/redis
+    container_name: redis-project-school
+    depends_on:
+      - db
+    ports:
+      - REDIS_PORT:REDIS_PORT
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
+    volumes:
+      - 'redis_data:/bitnami/redis/data'
+
+volumes:
+  redis_data:
+    driver: local
