--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express-async-errors": "^3.1.1",
     "google-auth-library": "^8.1.1",
     "google-spreadsheet": "^3.3.0",
+    "ioredis": "^5.2.4",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
