change key redis

--- a/.env.example
+++ b/.env.example
@@ -22,8 +22,8 @@ DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_NAME=
 
-REDIS_HOST=
-REDIS_PORT=
-REDIS_PASSWORD=
+REDISHOST=
+REDISPORT=
+REDISPASSWORD=
 
 DATABASE_URL="${DATABASE_DRIVER}://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public"
