fix send infos of user to front, delete draft when activity is created by draft

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,9 +17,9 @@ services:
     depends_on:
       - db
     ports:
-      - REDIS_PORT:REDIS_PORT
+      - REDIS_PORT:REDISPORT
     environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_PASSWORD=${REDISPASSWORD}
       - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
     volumes:
       - 'redis_data:/bitnami/redis/data'
