--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^18.0.6",
     "@types/nodemailer": "^6.4.4",
     "@types/pg": "^8.6.5",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "eslint": "^7.32.0 || ^8.2.0",
@@ -45,6 +46,7 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
-    "pg": "8.7.3"
+    "pg": "8.7.3",
+    "swagger-ui-express": "^4.6.0"
   }
 }
