--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@prisma/client": "4.7.1",
     "bcrypt": "^5.0.1",
+    "bull": "^4.10.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
